--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -228,13 +228,13 @@
                                                         <td [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}"> {{
                                                             d.Quantity }} </td>
                                                         <td [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}">
-                                                            {{d.DiscountAmount }} </td>
+                                                            {{d.DiscountAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}} </td>
                                                         <td [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}"> {{
-                                                            d.SubTotal }} </td>
+                                                            d.SubTotal | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}} </td>
                                                         <td [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}">
                                                             {{d.GSTType}} </td>
                                                         <td [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}"> {{
-                                                            d.GSTAmount}} </td>
+                                                            d.GSTAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}} </td>
 
                                                         <td [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}"
                                                             *ngIf="d.gst_detailssss[0][1].type === 'cGST-sGST'">
@@ -246,13 +246,13 @@
                                                             *ngIf="d.gst_detailssss[0][0].type === 'iGST'">
                                                             {{d.gst_detailssss[0][0].amt }}</td>
                                                         <td [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}">
-                                                            {{d.TotalAmount - d.AddlDiscount}} </td>
+                                                            {{d.TotalAmount - d.AddlDiscount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}} </td>
                                                         <td [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}">
-                                                            {{d.AddlDiscount}} </td>
+                                                            {{d.AddlDiscount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}} </td>
                                                         <td [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}">
-                                                            {{(d.TotalAmount - d.AddlDiscount) - d.DueAmount }} </td>
+                                                            {{(d.TotalAmount - d.AddlDiscount) - d.DueAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}} </td>
                                                         <td [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}"> {{
-                                                            d.DueAmount }} </td>
+                                                            d.DueAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}} </td>
                                                         <td *ngIf="d.ProductStatus === 1 "
                                                             [ngClass]="{'my_class': d.PaymentStatus === 'Unpaid'}">
                                                             Deliverd </td>
@@ -601,19 +601,19 @@
                                                         <td [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
                                                             {{t.ProductName}}</td>
                                                         <td [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
-                                                            {{t.UnitPrice}}</td>
+                                                            {{t.UnitPrice | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                         <td [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
                                                             {{t.Quantity }}</td>
                                                         <td [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
-                                                            {{t.DiscountAmount}}</td>
+                                                            {{t.DiscountAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                         <td [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
-                                                            {{t.SubTotal}}</td>
+                                                            {{t.SubTotal | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                         <td [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
                                                             {{t.GSTType}}</td>
                                                         <td [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
                                                             {{t.GSTPercentage}}</td>
                                                         <td [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
-                                                            {{t.GSTAmount}}</td>
+                                                            {{t.GSTAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                         <td style="display: none;"
                                                             [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}"><span
                                                                 *ngIf="t.GSTType === 'CGST-SGST'"> {{t.GSTPercentage/2}}
@@ -638,10 +638,10 @@
                                                         </td>
                                                         <td style="display: none;"
                                                             [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
-                                                            <span *ngIf="t.GSTType === 'IGST'">{{t.GSTAmount}}</span>
+                                                            <span *ngIf="t.GSTType === 'IGST'">{{t.GSTAmount }}</span>
                                                         </td>
                                                         <td [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
-                                                            {{t.TotalAmount}}</td>
+                                                            {{t.TotalAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                         <td [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
                                                             {{t.Barcode}}</td>
                                                         <td [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">{{
@@ -760,11 +760,11 @@
                                                         </td>
                                                         <td>{{c.InvoiceNo}}</td>
                                                         <td>{{c.Description}}</td>
-                                                        <td>{{c.Price}}</td>
+                                                        <td>{{c.Price | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                         <td>{{c.GSTType}}</td>
                                                         <td>{{c.GSTPercentage}}%</td>
-                                                        <td>{{c.GSTAmount}}</td>
-                                                        <td>{{c.TotalAmount}}</td>
+                                                        <td>{{c.GSTAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
+                                                        <td>{{c.TotalAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -803,13 +803,13 @@
                 <tbody>
                     <tr class="text-center" *ngFor="let gst of gstMaster let i = index;">
                         <td>{{gst.GSTType}}</td>
-                        <td>{{gst.Amount}}</td>
+                        <td>{{gst.Amount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                     </tr>
                 </tbody>
                 <tfoot class="text-center">
                     <tr>
                         <th style="color: red; font-weight: 600;">Total Amt</th>
-                        <th style="color: red; font-weight: 600;">{{this.totalGstAmount}}</th>
+                        <th style="color: red; font-weight: 600;">{{this.totalGstAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</th>
                     </tr>
                 </tfoot>
             </table>
@@ -836,13 +836,13 @@
                 <tbody>
                     <tr class="text-center" *ngFor="let gst of gstdetails let i = index;">
                         <td>{{gst.GSTType}}</td>
-                        <td>{{gst.Amount}}</td>
+                        <td>{{gst.Amount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                     </tr>
                 </tbody>
                 <tfoot class="text-center">
                     <tr>
                         <th style="color: red; font-weight: 600;">Total Amt</th>
-                        <th style="color: red; font-weight: 600;">{{this.DetailtotalGstAmount}}</th>
+                        <th style="color: red; font-weight: 600;">{{this.DetailtotalGstAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</th>
                     </tr>
                 </tfoot>
             </table>
@@ -869,13 +869,13 @@
                 <tbody>
                     <tr class="text-center" *ngFor="let gst of gstService let i = index;">
                         <td>{{gst.GSTType}}</td>
-                        <td>{{gst.Amount}}</td>
+                        <td>{{gst.Amount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                     </tr>
                 </tbody>
                 <tfoot class="text-center">
                     <tr>
                         <th style="color: red; font-weight: 600;">Total Amt</th>
-                        <th style="color: red; font-weight: 600;">{{this.ServicetotalGstAmount}}</th>
+                        <th style="color: red; font-weight: 600;">{{this.ServicetotalGstAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</th>
                     </tr>
                 </tfoot>
             </table>
