--- a/web1/src/app/inventory/preorder-list/preorder-list.component.html
+++ b/web1/src/app/inventory/preorder-list/preorder-list.component.html
@@ -94,9 +94,9 @@
                                                     <!-- <td>{{data.PaymentStatus}}</td> -->
                                                     <td>{{(data.GSTNo !== 'null')? data.GSTNo: ''}}</td>
                                                     <td>{{data.Quantity}}</td>
-                                                    <td>{{data.TotalAmount}}</td>
-                                                    <td>{{data.DiscountAmount}}</td>
-                                                    <td>{{data.GSTAmount}}</td>
+                                                    <td>{{data.TotalAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
+                                                    <td>{{data.DiscountAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
+                                                    <td>{{data.GSTAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     <td>{{data.CreatedPerson}}</td>
                                                     <td>{{data.UpdatedPerson}}</td>
                                                 </tr>
