--- a/web1/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web1/src/app/inventory/purchase-list/purchase-list.component.html
@@ -136,9 +136,9 @@
                           <td>{{data.PaymentStatus}}</td>
                           <td>{{(data.GSTNo !== 'null')? data.GSTNo: ''}}</td>
                           <td>{{data.Quantity}}</td>
-                          <td>{{data.TotalAmount}}</td>
-                          <td>{{data.DiscountAmount}}</td>
-                          <td>{{data.GSTAmount}}</td>
+                          <td>{{data.TotalAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
+                          <td>{{data.DiscountAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
+                          <td>{{data.GSTAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                           <td>{{data.CreatedPerson}}</td>
                           <td>{{data.UpdatedPerson}}</td>
                         </tr>
@@ -184,7 +184,7 @@
           </div>
           <div class="col-md-4" style="margin-top: 10px;">
             <span style="font-size: 17px; font-weight: 600;color: #ff5100; ">TotalAmount : </span> <span
-              style="font-size: 15px; color: #000;">{{this.paymentHistoryList[0]?.TotalAmount}}</span>
+              style="font-size: 15px; color: #000;">{{this.paymentHistoryList[0]?.TotalAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</span>
           </div>
         </div>
         <div class="row mt-4">
@@ -204,8 +204,8 @@
                   <tr *ngFor="let data of paymentHistoryList  let i = index;">
                     <td class="ps-3">{{ i + 1 }}</td>
                     <td class="text-center">{{data.PaymentMode}}</td>
-                    <td class="text-center">{{data.Amount }}</td>
-                    <td class="text-center">{{data.Dueamount}}</td>
+                    <td class="text-center">{{data.Amount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
+                    <td class="text-center">{{data.Dueamount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                   </tr>
                 </tbody>
               </table>
