--- a/web1/src/app/inventory/purchase/purchase.component.html
+++ b/web1/src/app/inventory/purchase/purchase.component.html
@@ -515,7 +515,7 @@
                                                         {{data.ProductName}}</td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
-                                                        {{data.UnitPrice }}</td>
+                                                        {{data.UnitPrice | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     <td *ngIf="data.UpdateProduct"
                                                         style=" width:60px;text-align: center;">
                                                         <input style=" width:60px;text-align: center;" min="0"
@@ -542,7 +542,7 @@
                                                     </td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
-                                                        {{data.DiscountAmount}}</td>
+                                                        {{data.DiscountAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     <td *ngIf="data.UpdateProduct"
                                                         style=" width:60px;text-align: center;">
                                                         <input style=" width:60px;text-align: center;" min="0"
@@ -554,7 +554,7 @@
                                                     </td>
                                                     <td class="text-center"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
-                                                        {{data.SubTotal }}</td>
+                                                        {{data.SubTotal | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
                                                         {{data.GSTPercentage}}%</td>
@@ -569,7 +569,7 @@
                                                     </td>
                                                     <td *ngIf="!data.UpdateProduct" class="text-center"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
-                                                        {{data.GSTAmount}}</td>
+                                                        {{data.GSTAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     <td *ngIf="data.UpdateProduct"
                                                         style=" width:60px;text-align: center;">
                                                         <input style=" width:60px;text-align: center;" min="0"
@@ -600,10 +600,10 @@
                                                     </td>
                                                     <td class="text-center"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
-                                                        {{data.TotalAmount}}</td>
+                                                        {{data.TotalAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     <td *ngIf="!data.UpdateProduct " class="text-center"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
-                                                        {{data.RetailPrice}}</td>
+                                                        {{data.RetailPrice | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     <td *ngIf="data.UpdateProduct "
                                                         style=" width:60px;text-align: center;">
                                                         <input style=" width:60px;text-align: center;" min="0"
@@ -614,7 +614,7 @@
                                                     </td>
                                                     <td *ngIf="!data.UpdateProduct " class="text-center"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
-                                                        {{data.WholeSalePrice}}</td>
+                                                        {{data.WholeSalePrice | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     <td *ngIf="data.UpdateProduct "
                                                         style=" width:60px;text-align: center;">
                                                         <input style=" width:60px;text-align: center;" min="0"
@@ -668,18 +668,18 @@
                                                         class="text-center">--</td>
                                                     <td *ngIf="data.ID !== null"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
-                                                        class="text-center">{{data.Amount }} </td>
+                                                        class="text-center">{{data.Amount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}} </td>
                                                     <td *ngIf="data.ID === null"
                                                         [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
-                                                        class="text-center">{{data.Price}} </td>
+                                                        class="text-center">{{data.Price | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}} </td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
-                                                        class="text-center">{{data.GSTAmount}}</td>
+                                                        class="text-center">{{data.GSTAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
                                                         class="text-center">{{data.GSTPercentage}}%</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
                                                         class="text-center">{{data.GSTType}}</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
-                                                        class="text-center">{{data.TotalAmount}}</td>
+                                                        class="text-center">{{data.TotalAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
                                                         class="text-center">--</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
