--- a/web1/src/app/po/fitter-invoice-list/fitter-invoice-list.component.html
+++ b/web1/src/app/po/fitter-invoice-list/fitter-invoice-list.component.html
@@ -132,7 +132,7 @@
                                               required #GSTPercentagecontrol [autocomplete]="false"
                                               [disabled]="!UpdateProduct" (blur)="calculateGrandTotal(v); gstCheck(v)">
                                             </td>
-                                            <td>{{v.GSTAmount}}</td>
+                                            <td>{{v.GSTAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                             <td>
                                               <select *ngIf="v.GSTPercentage == 0" [disabled]="!UpdateProduct" class="inputselectWidth"  name="v.GSTType{{v.ID}}" [(ngModel)]="v.GSTType"
                                                     required #GSTTypecontrol1 >
@@ -146,7 +146,7 @@
                                                       </option>
                                                 </select>
                                             </td>
-                                            <td>{{v.TotalAmount}}</td>
+                                            <td>{{v.TotalAmount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                         </tr>
                                       </tbody>
                                   </table>
