--- a/web1/src/app/po/fitter-invoice/fitter-invoice.component.html
+++ b/web1/src/app/po/fitter-invoice/fitter-invoice.component.html
@@ -100,7 +100,7 @@
                                                 <td>{{f.ProductName}}</td>
                                                 <td>{{f.LensType}}</td>
                                                 <td>{{(f.Option !== 'undefined')? f.Option: ''}}</td>
-                                                <td>{{f.FitterCost}}</td>
+                                                <td>{{f.FitterCost | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                                 <td>{{f.Quantity}}</td>
                                                 <td>{{f.SubTotal}}</td>
                                             </tr>
